--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation "com.google.dagger:hilt-android:2.47"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.2"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation 'junit:junit:4.13.2'
