--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,26 +11,50 @@ navigation-compose-version = "2.6.0"
 junit-version = "4.13.2"
 ext-junit-version = "1.1.5"
 espresso-core-version = "3.5.1"
+dagger-hilt-version = "2.47"
+hilt-version = "1.0.0"
+devtools-ksp = "1.8.10-1.0.9"
+coroutunes-android-version = "1.7.2"
+retrofit-version = "2.9.0"
+room-version = "2.5.2"
+okhttp-version = "5.0.0-alpha.2"
+coil-compose-version = "2.4.0"
+core-splash-screen = "1.0.0"
 
 [libraries]
-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx-version"}
-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx-version"}
-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose-version"}
-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose-ui-version"}
-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose-ui-version"}
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx-version" }
+lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx-version" }
+activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose-version" }
+compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose-ui-version" }
+compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "compose-ui-version" }
+compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose-ui-version" }
+compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose-ui-version" }
+compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "compose-ui-version" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3-version"}
-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose-version"}
-junit = { group = "junit", name = "junit", version.ref = "junit-version"}
-test-ext = { group = "androidx.test.ext", name = "junit", version.ref = "ext-junit-version"}
-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core-version"}
-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose-ui-version"}
-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose-ui-version"}
-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "compose-ui-version"}
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose-version" }
+junit = { group = "junit", name = "junit", version.ref = "junit-version" }
+test-ext = { group = "androidx.test.ext", name = "junit", version.ref = "ext-junit-version" }
+test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core-version" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx-version" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-version" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room-version" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room-version" }
+hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt-version" }
+core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "core-splash-screen" }
+com-google-dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt-version" }
+com-google-dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt-version" }
+org-jetbrains-kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutunes-android-version" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit-version" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit-version" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp-version" }
+io-coil-kt-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose-version" }
 
 [plugins]
+com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "devtools-ksp" }
 com-android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
 com-android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
+com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt-version" }
 
 [bundles]
 androidx = [
@@ -46,4 +70,13 @@ androidx = [
     "compose-ui-test-junit4",
     "compose-ui-tooling",
     "compose-ui-test-manifest",
+    "lifecycle-viewmodel-compose",
+    "hilt-navigation-compose",
+    "room-runtime",
+    "core-splashscreen"
+]
+
+retrofit2 = [
+    "retrofit",
+    "converter-gson"
 ]
