--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,8 @@ retrofit-version = "2.9.0"
 room-version = "2.5.2"
 okhttp-version = "5.0.0-alpha.2"
 coil-compose-version = "2.4.0"
-core-splash-screen = "1.0.0"
+core-splash-screen = "1.0.1"
+secrets-gradle-plugin-version = "2.0.1"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx-version" }
@@ -55,6 +56,7 @@ com-android-application = { id = "com.android.application", version.ref = "andro
 com-android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
 com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt-version" }
+secrets-gradle-plugin= { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secrets-gradle-plugin-version" }
 
 [bundles]
 androidx = [
