Updated library versions

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-compose-ui-version = "1.4.3"
+compose-ui-version = "1.5.0"
 material3-version = "1.1.1"
 nav-version = "2.6.0"
 android-gradle-plugin = "8.1.0"
 kotlin-android = "1.8.10"
 core-ktx-version = "1.10.1"
 lifecycle-runtime-ktx-version = "2.6.1"
-activity-compose-version = "1.7.2"
-navigation-compose-version = "2.6.0"
+activity-compose-version = "1.8.0-alpha06"
+navigation-compose-version = "2.7.0"
 junit-version = "4.13.2"
 ext-junit-version = "1.1.5"
 espresso-core-version = "3.5.1"
