--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,15 @@ ext-junit-version = "1.1.5"
 espresso-core-version = "3.5.1"
 google-services = "4.3.15"
 google-firebase = "32.2.2"
+dagger-hilt-version = "2.47"
+hilt-version = "1.0.0"
+devtools-ksp = "1.8.10-1.0.9"
+coroutunes-android-version = "1.7.2"
+retrofit-version = "2.9.0"
+room-version = "2.5.2"
+okhttp-version = "5.0.0-alpha.2"
+coil-compose-version = "2.4.0"
+core-splash-screen = "1.0.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx-version"}
@@ -30,12 +39,26 @@ compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", versi
 compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "compose-ui-version"}
 com-google-firebase = { group = "com.google.firebase", name = "firebase-bom", version.ref = "google-firebase"}
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx-version" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-version" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room-version" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room-version" }
+hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt-version" }
+com-google-dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt-version" }
+com-google-dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt-version" }
+org-jetbrains-kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutunes-android-version" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit-version" }
+converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit-version" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp-version" }
+io-coil-kt-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose-version" }
 
 [plugins]
+com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "devtools-ksp" }
 com-android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
 com-android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin-android" }
 com-google-gms-google-service = { id = "com.google.gms.google-services", version.ref = "google-services" }
+com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt-version" }
 
 [bundles]
 androidx = [
@@ -51,4 +74,12 @@ androidx = [
     "compose-ui-test-junit4",
     "compose-ui-tooling",
     "compose-ui-test-manifest",
+    "lifecycle-viewmodel-compose",
+    "hilt-navigation-compose",
+    "room-runtime",
+]
+
+retrofit2 = [
+    "retrofit",
+    "converter-gson"
 ]
